--- a/composer.json
+++ b/composer.json
@@ -6,18 +6,10 @@
     "license": "BSD-3-Clause",
     "require": {
         "php": "^8.1",
-        "silverstripe/framework": "5.0.x-dev",
-        "silverstripe/recipe-plugin": "2.0.x-dev",
-        "cwp/cwp-search": "2.0.x-dev",
-        "silverstripe/fulltextsearch": "4.0.x-dev",
+        "silverstripe/framework": "^5.1.0",
+        "silverstripe/recipe-plugin": "^2.0",
+        "cwp/cwp-search": "2.0",
         "symbiote/silverstripe-queuedjobs": "5.0.x-dev"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "squizlabs/php_codesniffer": "^3",
-        "cwp/cwp": "^3",
-        "cwp/cwp-core": "^3",
-        "cwp/starter-theme": "^4"
     },
     "suggest": {
         "silverstripe/textextraction": "Text Extraction API for SilverStripe CMS (mostly used with 'fulltextsearch' module)"
