--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "silverstripe/framework": "^5.1.0",
         "silverstripe/recipe-plugin": "^2.0",
         "cwp/cwp-search": "2.0",
-        "symbiote/silverstripe-queuedjobs": "5.0.x-dev"
+        "symbiote/silverstripe-queuedjobs": "^5.0.3"
     },
     "suggest": {
         "silverstripe/textextraction": "Text Extraction API for SilverStripe CMS (mostly used with 'fulltextsearch' module)"
